# Quantum

./: .gitignore  LICENSE  build.gradle  local.properties  settings.gradle
App/: build.gradle
App/src/androidTest/java/de/finnsweb/quantum/: ExampleInstrumentedTest.java
App/src/main/java/de/finnsweb/quantum/storage/: DatabaseManager.java
ClientC/Core/: CMakeLists.txt
ClientC/Core/database/: ContentTypes.h  Database.cpp  Database.h  Node.cpp  Node.h
ClientJava/: build.gradle
ClientJava/src/main/java/main/: Main.java
ClientJava/src/main/java/networking/: SecureSocket.java
ClientJava/src/main/java/util/: Message.java  Result.java  Util.java
ServerJava/: build.gradle
ServerJava/src/main/java/encryption/: AESEncryption.java  RSAEncryption.java
ServerJava/src/main/java/main/: Main.java
ServerJava/src/main/java/networking/: Client.java  SSocket.java
ServerJava/src/main/java/util/: Credentials.java  Sql.java  Util.java
gradle/wrapper/: gradle-wrapper.properties
